# CoverLetterGenerator

./: .gitignore  README.md  app.py  documents.pkl  environment.yml  main.py  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: main.yml  test.yaml
src/: document_manager.py  main.py  query_data.py  routes.py  services.py
templates/: index.html  job_details_page.html  manage_documents.html  set_keys.html  upload_files.html
tests/: conftest.py  test_set_keys.py  test_upload_page.py
