[project]
name = "coverlettergenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.10.0",
    "flask>=3.1.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "nltk>=3.9.1",
    "openai>=1.73.0",
    "pdfdocument>=4.0.0",
    "pre-commit>=4.2.0",
    "pypdf>=5.4.0",
    "pytest>=8.3.5",
    "pytest-flask>=1.3.0",
    "tiktoken>=0.9.0",
]
